@@ -24,17 +24,17 @@ fun <T> T?.fromEnv(envVar: String): String? =
 /**
  * Adds `--add-opens` options for Java 17 and higher to avoid java.lang.reflect.InaccessibleObjectException
  */
-fun getJavaAddOpensOptions(): List<String> {
-    val javaVersion = getCurrentJavaVersion()
+fun getJavaAddOpensOptions(javaVersion: Int?): List<String> {
     return if (javaVersion != null && javaVersion >= 17) {
         listOf(
             "--add-opens=java.base/java.util=ALL-UNNAMED",
             "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
         )
     } else {
         emptyList()
     }
 }
 
-private fun getCurrentJavaVersion() = System.getProperty("java.version").split(".")[0].toIntOrNull()
+fun getCurrentJavaVersion() = System.getProperty("java.version").asJavaVersion()
+
+fun String.asJavaVersion(): Int? = this.split(".")[0].toIntOrNull()
